adds max success count, moves sleep
- sleep does not need to happen on dns record
deletion because we are not worried about
caching at that point

- max success count is now a variable,
want to be able to change this without
editing the task EVERY TIME.

Signed-off-by: Sara Montecino <smontecino@pivotal.io>

--- a/scripts/common/manage-gcp-dns/task-terraforming.yml
+++ b/scripts/common/manage-gcp-dns/task-terraforming.yml
@@ -20,6 +20,7 @@ params:
   GCP_DNS_RECORD_TTL: 300
   ACTION:
   CHECK_DNS: true
+  MAX_SUCCESS_COUNT: 3
 
 run:
   path: ci/scripts/common/manage-gcp-dns/task
