--- a/scripts/bosh-bootloader/acceptance/task.yml
+++ b/scripts/bosh-bootloader/acceptance/task.yml
@@ -29,6 +29,19 @@ params:
   BBL_AZURE_REGION:
   BBL_GCP_SERVICE_ACCOUNT_KEY:
   BBL_GCP_REGION:
+  BBL_OPENSTACK_INTERNAL_CIDR:
+  BBL_OPENSTACK_EXTERNAL_IP:
+  BBL_OPENSTACK_AUTH_URL:
+  BBL_OPENSTACK_AZ:
+  BBL_OPENSTACK_DEFAULT_KEY_NAME:
+  BBL_OPENSTACK_DEFAULT_SECURITY_GROUP:
+  BBL_OPENSTACK_NETWORK_ID:
+  BBL_OPENSTACK_PASSWORD:
+  BBL_OPENSTACK_USERNAME:
+  BBL_OPENSTACK_PROJECT:
+  BBL_OPENSTACK_DOMAIN:
+  BBL_OPENSTACK_REGION:
+  BBL_OPENSTACK_PRIVATE_KEY:
   BBL_TEST_ENV_ID_PREFIX:
   BBL_TEST_PACKAGES:
   RUN_TEST:
