missed a spot with new openstack creds

--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -839,8 +839,8 @@ jobs:
       BBL_OPENSTACK_DEFAULT_KEY_NAME: ((bbl_openstack_default_key_name))
       BBL_OPENSTACK_DEFAULT_SECURITY_GROUP: ((bbl_openstack_default_security_group))
       BBL_OPENSTACK_NETWORK_ID: ((bbl_openstack_network_id))
-      BBL_OPENSTACK_PASSWORD: ((bbl_openstack_password))
-      BBL_OPENSTACK_USERNAME: ((bbl_openstack_username))
+      BBL_OPENSTACK_PASSWORD: ((bbl_openstack_user.password))
+      BBL_OPENSTACK_USERNAME: ((bbl_openstack_user.username))
       BBL_OPENSTACK_PROJECT: ((bbl_openstack_project))
       BBL_OPENSTACK_DOMAIN: ((bbl_openstack_domain))
       BBL_OPENSTACK_REGION: ((bbl_openstack_region))
