--- a/scripts/leftovers/acceptance/task.yml
+++ b/scripts/leftovers/acceptance/task.yml
@@ -28,3 +28,9 @@ params:
   BBL_VSPHERE_VCENTER_PASSWORD:
   BBL_VSPHERE_VCENTER_DC:
   BBL_DOWN_TIMEOUT:
+  BBL_OPENSTACK_DOMAIN:
+  BBL_OPENSTACK_USERNAME:
+  BBL_OPENSTACK_PASSWORD:
+  BBL_OPENSTACK_REGION:
+  BBL_OPENSTACK_PROJECT:
+  BBL_OPENSTACK_AUTH_URL:
