Add pass criteria for openstack job
[#163776198]

Signed-off-by: Sara Montecino <smontecino@pivotal.io>

--- a/pipelines/leftovers.yml
+++ b/pipelines/leftovers.yml
@@ -151,6 +151,7 @@ jobs:
       - acceptance-aws
       - acceptance-azure
       - acceptance-vsphere
+      - acceptance-openstack
 
 - name: build-release
   plan:
