Add wget to Minimal & Packr2 to Golang Dockerfiles
Co-authored-by: Christopher Hunter <chunter@pivotal.io>

--- a/dockerfiles/minimal/Dockerfile
+++ b/dockerfiles/minimal/Dockerfile
@@ -10,6 +10,7 @@ RUN \
             libreadline6 \
             libreadline6-dev \
             wget \
+            unzip \
             runit \
             lsof \
       && \
