--- a/scripts/bosh-bootloader/build-final-release/task.yml
+++ b/scripts/bosh-bootloader/build-final-release/task.yml
@@ -11,6 +11,7 @@ inputs:
   - name: bbl-version
   - name: bbl-version-final
   - name: ci
+  - name: terraform-binaries
 
 outputs:
   - name: tarred-builds
