needs the url for final packaging
- this gets saved to alittle text file

--- a/scripts/bosh-bootloader/build-final-release/task.yml
+++ b/scripts/bosh-bootloader/build-final-release/task.yml
@@ -18,6 +18,7 @@ outputs:
 
 params:
   BUMP_DEPLOYMENTS: false
+  TF_URL: "https://releases.hashicorp.com/terraform"
 
 run:
   path: ci/scripts/bosh-bootloader/build-final-release/task
