Add missing trigger to  bbl-downstream-docker-image
Signed-off-by: Nick Rohn <nrohn@pivotal.io>

--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -831,6 +831,7 @@ jobs:
   - do:
     - aggregate:
       - get: bosh-bootloader
+        trigger: true
         passed:
           - aws-acceptance-tests
           - azure-acceptance-tests
