--- a/scripts/vsphere-pautomator/create-opsman/task.yml
+++ b/scripts/vsphere-pautomator/create-opsman/task.yml
@@ -1,11 +1,16 @@
 ---
 platform: linux
 
+image_resource:
+  type: docker-image
+  source:
+    repository: cfinfrastructure/deployment
+
 inputs:
 - name: ci
 
 run:
-  path: ci/scripts/infrastructure-ci/vsphere-pautomator/create-opsman/task
+  path: ci/scripts/vsphere-pautomator/create-opsman/task
 
 params:
   GOVC_HOST:
