Add missing params to task

--- a/scripts/vsphere-pautomator/create-opsman/task.yml
+++ b/scripts/vsphere-pautomator/create-opsman/task.yml
@@ -13,4 +13,23 @@ run:
   path: ci/scripts/vsphere-pautomator/create-opsman/task
 
 params:
-  GOVC_HOST:
+  OPS_DISKTYPE:
+  OPS_PRIVATE_IP:
+  OPS_DNS:
+  OPS_NTP:
+  OPS_SSH_PASSWORD:
+  OPS_HOSTNAME:
+  OPS_NETWORK:
+  OPS_NETMASK:
+  OPS_GATEWAY:
+  OPS_VM_NAME:
+  OPS_MEMORY:
+  OPS_CPU:
+  OPS_VCENTER_URL:
+  OPS_VCENTER_USERNAME:
+  OPS_VCENTER_PASSWORD:
+  OPS_VCENTER_DATASTORE:
+  OPS_VCENTER_DATACENTER:
+  OPS_VCENTER_INSECURE:
+  OPS_VCENTER_RESOURCE_POOL:
+  OPS_VCENTER_CA_CERT:
