add pautomator resource

--- a/pipelines/vsphere-pautomator.yml
+++ b/pipelines/vsphere-pautomator.yml
@@ -5,7 +5,11 @@ resources:
   source:
     branch: vsphere-wip
     uri: https://github.com/cloudfoundry/infrastructure-ci.git
-
+- name: pivnet
+  type: docker-image
+  source:
+    repository: pivotalcf/pivnet-resource
+    tag: latest-final
 jobs:
 - name: create-opsman
   build_logs_to_retain: 101
@@ -14,7 +18,15 @@ jobs:
     - get: ci
       resource: vsphere-pautomator-ci
       trigger: true
+    - get: pautomator
+      type: pivnet
+      source: ((pivnet-token))
+      product_slug: platform-automation
   - task: create-opsman
+    config:
+      inputs:
+      - name: ci
+      - name: pautomator
     file: ci/scripts/vsphere-pautomator/create-opsman/task.yml
     params:
       OPS_DISKTYPE: thin
