--- a/pipelines/vsphere-pautomator.yml
+++ b/pipelines/vsphere-pautomator.yml
@@ -8,7 +8,7 @@ resource_types:
 
 
 resources:
-- name: vsphere-pautomator-ci
+- name: vsphere-p-automator-ci
   type: git
   source:
     branch: vsphere-wip
@@ -24,29 +24,32 @@ jobs:
   plan:
   - aggregate:
     - get: ci
-      resource: vsphere-pautomator-ci
+      resource: vsphere-p-automator-ci
+      trigger: true
+    - get: platform-automation-image
+      resource: platform-automation-release
       trigger: true
     - get: pautomator
   - task: create-opsman
     file: ci/scripts/vsphere-pautomator/create-opsman/task.yml
     params:
       OPS_DISKTYPE: thin
-      OPS_PRIVATE_IP: ((vcenter-pautomator-opsman-private-ip))
-      OPS_DNS: ((vcenter-pautomator-opsman-dns))
+      OPS_PRIVATE_IP: ((vcenter-p-automator-opsman-private-ip))
+      OPS_DNS: ((vcenter-p-automator-opsman-dns))
       OPS_NTP: time.svc.pivotal.io
-      OPS_SSH_PASSWORD: ((vcenter-pautomator-opsman-ssh-password))
-      OPS_HOSTNAME: ((vcenter-pautomator-opsman-url))
-      OPS_NETWORK: ((vcenter-pautomator-opsman-network))
+      OPS_SSH_PASSWORD: ((vcenter-p-automator-opsman-ssh-password))
+      OPS_HOSTNAME: ((vcenter-p-automator-opsman-url))
+      OPS_NETWORK: ((vcenter-p-automator-opsman-network))
       OPS_NETMASK: 255.255.255.0
       OPS_GATEWAY: 192.168.1.1
       OPS_VM_NAME: pivotal-ops-mamager-2
       OPS_MEMORY: 10
       OPS_CPU: 10
-      OPS_VCENTER_URL: ((vcenter-pautomator-url))
-      OPS_VCENTER_USERNAME: ((vcenter-pautomator-username))
-      OPS_VCENTER_PASSWORD: ((vcenter-pautomator-password))
-      OPS_VCENTER_DATASTORE: ((vcenter-pautomator-datastore))
-      OPS_VCENTER_DATACENTER: ((vcenter-pautomator-datacenter))
+      OPS_VCENTER_URL: ((vcenter-p-automator-url))
+      OPS_VCENTER_USERNAME: ((vcenter-p-automator-username))
+      OPS_VCENTER_PASSWORD: ((vcenter-p-automator-password))
+      OPS_VCENTER_DATASTORE: ((vcenter-p-automator-datastore))
+      OPS_VCENTER_DATACENTER: ((vcenter-p-automator-datacenter))
       OPS_VCENTER_INSECURE: 1
-      OPS_VCENTER_RESOURCE_POOL: ((vcenter-pautomator-resource-pool))
-      OPS_VCENTER_CA_CERT: ((vcenter-pautomator-ca-cert))
+      OPS_VCENTER_RESOURCE_POOL: ((vcenter-p-automator-resource-pool))
+      OPS_VCENTER_CA_CERT: ((vcenter-p-automator-ca-cert))
