--- a/pipelines/vsphere-pautomator.yml
+++ b/pipelines/vsphere-pautomator.yml
@@ -29,7 +29,7 @@ jobs:
       resource: platform-automation-release
       trigger: true
       params:
-        globs: ["*image*"] # fix me
+        globs: ["*image*"]
         unpack: true
   - task: create-opsman
     image: platform-automation-image
