--- a/pipelines/vsphere-pautomator.yml
+++ b/pipelines/vsphere-pautomator.yml
@@ -40,7 +40,7 @@ jobs:
       resource: ops-manager-release
       trigger: true
       params:
-        globs: ["*vSphere*"]
+        globs: ["*vsphere*"]
   - task: create-opsman
     image: platform-automation-image
     file: ci/scripts/vsphere-p-automator/create-opsman/task.yml
