--- a/pipelines/vsphere-pautomator.yml
+++ b/pipelines/vsphere-pautomator.yml
@@ -54,8 +54,8 @@ jobs:
       OPS_HOSTNAME: ((vcenter-p-automator-opsman-url))
       OPS_NETWORK: ((vcenter-p-automator-opsman-network))
       OPS_NETMASK: 255.255.255.0
-      OPS_GATEWAY: 192.168.1.1
-      OPS_VM_NAME: pivotal-ops-mamager-2
+      OPS_GATEWAY: 192.168.3.1
+      OPS_VM_NAME: pivotal-ops-manager
       OPS_MEMORY: 10
       OPS_CPU: 10
       OPS_VCENTER_URL: ((vcenter-p-automator-url))
